package Model;

public abstract class FindingTile extends Tile {


    /**
     * Constructor
     * @param id o monadikos kodikos
     * @param imagePath To path tis eikonas
     */
    public FindingTile(int id, String imagePath) {
        super(id, imagePath);
    }
    
}
