package Model;

public abstract class StatueTile extends FindingTile {

    /**
     * Constructor
     * @param id To monadiko ID
     * @param imagePath To path tis eikonas
     */
    public StatueTile(int id, String imagePath) {
        super(id, imagePath);
    }


    
}
